k8s/eks/databases.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres-data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: auth-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db
spec:
  selector:
    app: auth-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-db
  template:
    metadata:
      labels:
        app: task-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres-data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: task-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: task-db
spec:
  selector:
    app: task-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-db
  template:
    metadata:
      labels:
        app: calendar-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres-data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: calendar-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: calendar-db
spec:
  selector:
    app: calendar-db
  ports:
    - port: 5432
      targetPort: 5432
